--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.7",
+        "sass-loader": "^8.0.2",
         "tailwindcss": "^2.0.2"
     }
 }
